--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,12 +9,28 @@ body
 }
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
-
 #container h1 {
     font-size: 20px;
+}
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: 400;
+    font-size: .8em;
+}
+
+#post {
+    padding: 1em;
 }
