--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,29 @@
 body 
 {
+    background: black;
     color: #333;
-    text-align: left;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
+}
+#cabecera {
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: #fff;
+    font-weight: 700;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: 400;
+    font-size: .8em;
 }
 #container {
     width: 70%;
@@ -17,20 +35,8 @@ body
 #container h1 {
     font-size: 20px;
 }
-#cabecera {
-    background: #33A;
-    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
-}
-#cabecera #tagline{
-    padding: 0 0 0 1em;
-    font-weight: 400;
-    font-size: .8em;
-}
 
 #post {
+    background: #fff;
     padding: 1em;
 }
